# Nemesis

./: mkdocs.yml  skaffold.yaml
.github/workflows/: docs.yaml  helm-release.yml
cmd/connectors/cobaltstrike-nemesis-connector/: helpers.cna  http.cna  nemesis-connector.cna  ps.cna
cmd/connectors/mythic-connector/: sync.py
cmd/llm/: .flake8  pyproject.toml  pyrightconfig.json
cmd/llm/llm/: __main__.py  app.py  settings.py
cmd/llm/llm/services/: llm.py
dockerfiles/: llm.Dockerfile
docs/: development.md  index.md  quickstart.md  setup.md  usage_guide.md
docs/Installation/: requirements_docker_desktop.md
docs/installation/: requirements.md  requirements_docker_desktop.md  requirements_minikube.md  setup.md
helm/nemesis/: values.yaml
helm/nemesis/templates/: llm.yaml
kubernetes/elastic/: configmap.yaml  kibana.yaml
